# gen-readme

./: .gitignore  README.md  change_detector.py  file_scanner.py  generate-readme.py  generate_category_details.py  generate_category_links.py  generate_subdirectory_readme_content.py  goals.md  hash_manager.py  identifier.sqlite  logger.py  main.py  make_db.py  metrics.py  output.prof  pyproject.toml  readme_generator.py  readme_writer.py  requirements.txt  settings.json  update_readme.py  update_subdirectory_readme.py
.run/: gen-readme.run.xml
_tests/: TestFileWriting.py  TestReadmeIntegration.py  test_generate_category_details.py  test_get_categories.py  test_get_til_count.py  test_read_template.py  test_update_subdirectory_readme.py
gen_readme/: change_detector.py  file_scanner.py  hash_manager.py  main.py  make_db.py  metrics.py
gr/: pyvenv.cfg
logs/: log_config.py
output/: readme_manager.py  terminal_output.py
scanning/: file_scanner.py  scan_manager.py
test_dir/main_dir_65/: placeholder.txt
test_dir/main_dir_98/subdir_98_0/: file_4.json
